[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "tethysdash_plugin_cw3e"
authors = [{ name = "Aquaveo LLC", email = "ckrewson@aquaveo.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.0.2"
description = "CW3E visualizations plugin for tethysdash"
requires-python = ">=3.9"
dependencies = [
    "intake>=0.6.6",
    "BeautifulSoup4>=4.12.3",
    "requests>=2.32.3",
]

[project.urls]
Homepage = "https://github.com/FIRO-Tethys/tethysdash_plugin_cw3e"
Issues = "https://github.com/FIRO-Tethys/tethysdash_plugin_cw3e/issues"

[project.entry-points."intake.drivers"]
cw3e_ar_landfall = "tethysdash_plugin_cw3e.ar_landfall:ARLandfall"
cw3e_qpf = "tethysdash_plugin_cw3e.qpf:QPF"
cw3e_surface_meterology = "tethysdash_plugin_cw3e.surface_meterology:SurfaceMeterology"
cimss_integrated_microwave_animations = "tethysdash_plugin_cw3e.integrated_microwave_animations:IntegratedMicrowaveAnimations"
cw3e_mrr = "tethysdash_plugin_cw3e.micro_rain_radars:MicroRainRadars"
cw3e_disdrometer = "tethysdash_plugin_cw3e.disdrometer:Disdrometer"
cw3e_radiometric_wind_profilers = "tethysdash_plugin_cw3e.radiometric_wind_profilers:RadiometricWindProfilers"
noaa_ssmis_products = "tethysdash_plugin_cw3e.ssmis_products:SSMISProducts"
cw3e_qpe = "tethysdash_plugin_cw3e.qpe:QPE"
cw3e_water_storage_tracking = "tethysdash_plugin_cw3e.water_storage_tracking:WaterStorageTracking"
noaa_water_vapor_flux = "tethysdash_plugin_cw3e.water_vapor_flux:WaterVaporFlux"
noaa_disdrometer = "tethysdash_plugin_cw3e.noaa_disdrometer:NOAADisdrometer"
noaa_snow_level = "tethysdash_plugin_cw3e.snow_level:SnowLevel"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["*"]

[tool.setuptools.package-data]
"tethysdash_plugin_cw3e" = ["static/*.png"]